--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,15 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
-<a href = "/blog">Main blog Page</a>
 
-<a href="/newpost">Add a Blog Entry</a>
+<h1  class="padding">Add a Blog Entry</h1>
 
-
-
-<center><h1>Add a Blog Entry</h1></center>
-
-<form action="/newpost" method="post">
+<form  class="padding" action="/newpost" method="post">
     <table>
             <tr>
                 <div style="display:inline-block;margin-right:20px;">
