--- a/templates/newblog.html
+++ b/templates/newblog.html
@@ -1,9 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-<a href = "/blog">Main blog Page</a>
-
-<a href="/newpost">Add a Blog Entry</a>
-<center><h1>{{entry.title}}</h1></center>
-<p>{{entry.body}}</p>
+<h1>{{post.title}}</h1>
+<p>{{post.body}}</p>
 {% endblock %}
